fix(Homepage.js): fix some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -89,18 +89,8 @@ nav>div>a {
   width: 100%;
 }
 
-.authorWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 10px;
-}
 
-.authorWrapper .userWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+
 
 .authorWrapper .userWrapper .avatarWrapper {
   width: 20px;
